completed the button styling, there is one issue of buttons changing color even on reaching the ends, which isn't supposed to happen

--- a/slideshow.html
+++ b/slideshow.html
@@ -9,10 +9,14 @@
         *{
             margin: 0px;
             padding: 0px;
+            background-color: white;
         }
     </style>
 </head>
 <body>
+    <div class="heading">
+        <h1></h1>
+    </div>
     <div class="imgCont">
         <button id="prev"></button>
         <img src="1.jpg" alt="" id="img1">
