--- a/slideshow.html
+++ b/slideshow.html
@@ -5,25 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        *{
-            margin: 0px;
-            padding: 0px;
-            background-color: white;
-        }
-    </style>
 </head>
 <body>
     <div class="heading">
         <h1></h1>
     </div>
     <div class="imgCont">
-        <button id="prev"></button>
+        <!-- <button id="prev"></button> -->
         <img src="1.jpg" alt="" id="img1">
         <img src="2.jpg" alt="" id="img2">
         <img src="3.jpg" alt="" id="img3">
         <img src="4.jpg" alt="" id="img4">
-        <button id="next"></button>
+        <!-- <button id="next"></button> -->
     </div>
 </body>
 <script src="slideshow.js"></script>
